fix footer and spacing below wnrs deck

--- a/assets/typography_base.css
+++ b/assets/typography_base.css
@@ -52,6 +52,7 @@ h6: version
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6, p, span, details, li, textarea {
     font-family: Source Sans Pro;
+    white-space: pre;
 }
 
 h1 {
